# kraai

./: .gitignore  AGENT.md  AGENTS.md  Cargo.nix  Cargo.toml  README.md  biome.json  deny.toml  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ai-agent/: Cargo.toml
ai-agent/src/: main.rs
ai-agent/src/tools/: mod.rs
ai-agent/src/tools/prompts/: read_file.md
backend/: Cargo.toml
backend/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/tools/: read_file.rs
cli/src/tools/prompts/: tool.md
crates/agent/: Cargo.toml
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: api.rs  handle.rs  lib.rs  runtime.rs  settings.rs
crates/agent-ts-bindings/: .gitignore  Cargo.toml  package.json  tsconfig.json
crates/agent-ts-bindings/.github/: renovate.json
crates/agent-ts-bindings/.github/workflows/: CI.yml
crates/agent-ts-bindings/config/: config.toml
crates/agent-ts-bindings/src/: lib.rs
crates/agent/src/: lib.rs  tool_state.rs
crates/agent/src/profiles/: mod.rs  plan_code.md
crates/cli/: Cargo.toml
crates/cli/config/: config.toml
crates/cli/src/: app.rs  main.rs
crates/desktop/: Cargo.toml  Cargo_1.toml  Tauri.toml  package.json
crates/desktop/frontend/: .jscpd.json  eslint.config.js  knip.json  package.json  prettier.config.js  sgconfig.yml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
crates/desktop/frontend/locales/: ar.json  en.json  fr.json
crates/desktop/frontend/scripts/: complete-task.js  prepare-release.js
crates/desktop/frontend/src/: App.test.tsx  App.tsx  main.tsx  quick-pane-main.tsx
crates/desktop/frontend/src-tauri/: tauri.macos.conf.json
crates/desktop/src/: bindings.rs
crates/desktop/src-tauri/: tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
crates/desktop/src-tauri/capabilities/: default.json  desktop.json  quick-pane.json
crates/desktop/src/commands/: quick_pane.rs
crates/kraai-agent/: Cargo.toml
crates/kraai-agent/src/: lib.rs  tool_state.rs
crates/kraai-agent/src/manager/: mod.rs  prompts.rs  sessions.rs  streaming.rs  tool_calls.rs
crates/kraai-agent/src/profiles/: build_code.md  mod.rs
crates/kraai-persistence/: Cargo.toml
crates/kraai-persistence/src/: lib.rs
crates/kraai-runtime/: Cargo.toml
crates/kraai-runtime/src/: api.rs  handle.rs  lib.rs  runtime.rs  settings.rs
crates/kraai-runtime/src/runtime/: builder.rs  config.rs  core.rs  dispatch.rs  mod.rs  streaming.rs  tool_call_guard.rs  tool_calls.rs
crates/kraai-toon-schema/: Cargo.toml  README.md
crates/kraai-toon-schema/examples/: person.rs  read_file.rs
crates/kraai-toon-schema/src/: toon_encode.rs
crates/kraai-toon-schema/tests/: basic_types.rs  compile_fail_tests.rs  comprehensive.rs  new_features.rs  quoting_edge_cases.rs  toon_format_compatibility.rs
crates/kraai-toon-schema/tests/compile_fail/: enum_not_supported.rs  external_nested_type.rs  external_nested_type.stderr  missing_nested_field.rs  missing_nested_field.stderr  tuple_struct.rs  unknown_example_field.rs
crates/kraai-tui/: Cargo.toml
crates/kraai-tui/src/: app.rs  main.rs
crates/kraai-tui/src/app/: auth.rs  chat_tools.rs  lifecycle.rs  providers_flow.rs  runtime_bridge.rs  runtime_handlers.rs  session_commands.rs  settings.rs  settings_flow.rs  state.rs  terminal.rs  tests.rs  types.rs  ui.rs
crates/kraai-tui/src/components/: chat_history.rs
crates/llm-providers/kraai-provider-core/: Cargo.toml
crates/llm-providers/kraai-provider-core/src/: http_retry.rs  lib.rs
crates/llm-providers/kraai-provider-openai-chat-completions/: Cargo.toml
crates/llm-providers/kraai-provider-openai-chat-completions/src/: auth.rs  lib.rs  messages.rs  profile.rs  provider.rs  wire.rs
crates/llm-providers/kraai-provider-openai-codex/: Cargo.toml
crates/llm-providers/kraai-provider-openai-codex/src/: auth.rs  catalog.rs  lib.rs  messages.rs  provider.rs  wire.rs
crates/llm-providers/provider-core/: Cargo.toml
crates/llm-providers/provider-core/src/: http_retry.rs  lib.rs
crates/llm-providers/provider-mistralrs/: Cargo.toml
crates/llm-providers/provider-mistralrs/src/: lib.rs
crates/llm-providers/provider-openai/: Cargo.toml
crates/llm-providers/provider-openai-chat-completions/: Cargo.toml
crates/llm-providers/provider-openai-chat-completions/src/: auth.rs  lib.rs  messages.rs  profile.rs  provider.rs  sse.rs
crates/llm-providers/provider-openai-codex/: Cargo.toml
crates/llm-providers/provider-openai-codex/src/: auth.rs  catalog.rs  messages.rs  provider.rs  sse.rs  wire.rs
crates/llm-providers/provider-openai/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/toon-schema/: Cargo.toml  README.md
crates/toon-schema/examples/: person.rs  read_file.rs  test_enum.rs
crates/toon-schema/src/: ir.rs  lib.rs  parse.rs  toon_encode.rs
crates/toon-schema/tests/: basic_types.rs  comprehensive.rs  enum_support.rs  new_features.rs  quoting_edge_cases.rs  toon_format_compatibility.rs
crates/toon-schema/tests/compile_fail/: array_above_max.rs  array_above_max.stderr  array_below_min.rs  array_below_min.stderr  custom_range_on_non_vec.rs  custom_range_on_non_vec.stderr  empty_struct.rs  empty_struct.stderr  enum_not_supported.rs  enum_not_supported.stderr  example_not_object.rs  example_not_object.stderr  unit_struct.rs  (+27 more)
crates/ts-bindings/: .gitattributes  .yarnrc.yml  Cargo.toml  agent-ts-bindings.wasi-browser.js  agent-ts-bindings.wasi.cjs  browser.js  index.js  package.json  wasi-worker-browser.mjs  wasi-worker.mjs
crates/ts-bindings/__test__/: tsconfig.json
crates/ts-bindings/benchmark/: tsconfig.json
crates/ts-bindings/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/config/: config.toml
crates/tui/src/: app.rs  main.rs
llm-api-core/: Cargo.toml
llm-api-core/src/: lib.rs
llm-api-local/: Cargo.toml
llm-api-local/src/: lib.rs
llm-api-openwebui/: Cargo.toml
llm-api-openwebui/src/: lib.rs
openwebui-client/: Cargo.toml
openwebui-client/examples/: basic_usage.rs
openwebui-client/src/: lib.rs
(+193 files in other folders)
