[workspace]
members = [
  "crates/agent",
  "crates/agent-runtime",
  "crates/agent-ts-bindings",
  "crates/llm-providers/provider-core",
  "crates/llm-providers/provider-openai",
  "crates/persistence",
  "crates/tools/tool-core",
  "crates/tools/tool-edit-file",
  "crates/tools/tool-list-files",
  "crates/tools/tool-read-file",
  "crates/tools/tool-search-files",
  "crates/toon-schema",
  "crates/tui",
  "crates/types",
  "crates/workspace-hack",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88.0"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.

[workspace.dependencies]
agent = { path = "crates/agent" }
agent-runtime = { path = "crates/agent-runtime" }
persistence = { path = "crates/persistence" }
provider-core = { path = "crates/llm-providers/provider-core" }
provider-openai = { path = "crates/llm-providers/provider-openai" }
tool-core = { path = "crates/tools/tool-core" }
tool-edit-file = { path = "crates/tools/tool-edit-file" }
tool-list-files = { path = "crates/tools/tool-list-files" }
tool-read-file = { path = "crates/tools/tool-read-file" }
tool-search-files = { path = "crates/tools/tool-search-files" }
toon-schema = { path = "crates/toon-schema" }
types = { path = "crates/types" }

arboard = "3.6.1"
async-openai = { version = "0.33.0", features = [
  "byot",
  "chat-completion",
  "model",
] }
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = "0.6.5"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
futures = "0.3.32"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
llm-toolkit = "0.63.0"
napi = { version = "3.8.3", features = ["async", "tokio_rt"] }
napi-build = "2.3.1"
napi-derive = "3.5.2"
notify = "8.2.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
ratatui = { version = "0.30.0", features = [
  "all-widgets",
  "macros",
  "scrolling-regions",
  "serde",
] }
regex = "1.12.3"
reqwest = { features = ["json", "stream"], version = "0.13.2" }
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["derive", "full"] }
tachyonfx = "0.25.0"
textwrap = "0.16.2"
thiserror = "2.0.18"
tokio = { features = ["full"], version = "1.50.0" }
toml = "1.0.6"
toon-format = "0.4.4"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
trybuild = "1.0.116"
ulid = "1.2.1"
url = "2.5.8"
