[workspace]
members = [
  "crates/kraai-agent",
  "crates/kraai-persistence",
  "crates/kraai-runtime",
  "crates/kraai-toon-schema",
  "crates/kraai-tui",
  "crates/kraai-types",
  "crates/kraai-workspace-hack",
  "crates/llm-providers/kraai-provider-core",
  "crates/llm-providers/kraai-provider-openai-chat-completions",
  "crates/llm-providers/kraai-provider-openai-codex",
  "crates/tools/kraai-tool-close-file",
  "crates/tools/kraai-tool-core",
  "crates/tools/kraai-tool-edit-file",
  "crates/tools/kraai-tool-list-files",
  "crates/tools/kraai-tool-open-file",
  "crates/tools/kraai-tool-read-file",
  "crates/tools/kraai-tool-search-files",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88.0"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.

[workspace.dependencies]
kraai-agent = { path = "crates/kraai-agent" }
kraai-persistence = { path = "crates/kraai-persistence" }
kraai-provider-core = { path = "crates/llm-providers/kraai-provider-core" }
kraai-provider-openai-chat-completions = { path = "crates/llm-providers/kraai-provider-openai-chat-completions" }
kraai-provider-openai-codex = { path = "crates/llm-providers/kraai-provider-openai-codex" }
kraai-runtime = { path = "crates/kraai-runtime" }
kraai-tool-close-file = { path = "crates/tools/kraai-tool-close-file" }
kraai-tool-core = { path = "crates/tools/kraai-tool-core" }
kraai-tool-edit-file = { path = "crates/tools/kraai-tool-edit-file" }
kraai-tool-list-files = { path = "crates/tools/kraai-tool-list-files" }
kraai-tool-open-file = { path = "crates/tools/kraai-tool-open-file" }
kraai-tool-read-file = { path = "crates/tools/kraai-tool-read-file" }
kraai-tool-search-files = { path = "crates/tools/kraai-tool-search-files" }
kraai-toon-schema = { path = "crates/kraai-toon-schema" }
kraai-types = { path = "crates/kraai-types" }

arboard = "3.6.1"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
futures = "0.3.32"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
notify = "8.2.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
rand = "0.10.1"
ratatui = { version = "0.30.0", features = [
  "all-widgets",
  "macros",
  "scrolling-regions",
  "serde",
] }
regex = "1.12.3"
reqwest = { features = ["json", "stream"], version = "0.13.2" }
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.149"
sha2 = "0.11.0"
syn = { version = "2.0.117", features = ["derive", "full"] }
tachyonfx = "0.25.0"
textwrap = "0.16.2"
thiserror = "2.0.18"
tokio = { features = ["full"], version = "1.51.1" }
toml = "1.1.2"
toon-format = "0.4.5"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
trybuild = "1.0.116"
ulid = "1.2.1"
url = "2.5.8"
