[dependencies]
llm-api-openwebui = { path = "../llm-api-openwebui" }
llm-api-core = { path = "../llm-api-core" }
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15"
regex = "1.11"
serde_json = "1.0"
axum = { version = "0.8", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }

[package]
name = "backend"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85.1"
