[package]
edition = "2024"
name = "llm-api-local"
publish = false
rust-version = "1.85.1"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
llm-api-core = { path = "../llm-api-core" }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
reqwest = { features = ["json", "stream"], version = "0.12" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
tokio = { features = ["full"], version = "1.48" }
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
