[dependencies]
llm-api-core = { path = "../llm-api-core" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[package]
name = "llm-api-openwebui"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85.1"
