[package]
edition = "2024"
name = "llm-api-openwebui"
publish = false
rust-version = "1.85.1"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
llm-api-core = { path = "../llm-api-core" }
reqwest = { features = ["json", "stream"], version = "0.12" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
tokio = { features = ["full"], version = "1.47" }
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
