[package]
edition.workspace = true
name = "agent-runtime"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
agent.workspace = true
persistence.workspace = true
provider-core.workspace = true
provider-google.workspace = true
provider-openai.workspace = true
tool-core.workspace = true
tool-read-file.workspace = true
types.workspace = true

color-eyre.workspace = true
directories.workspace = true
futures.workspace = true
notify = "8.0.0"
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
