[package]
edition.workspace = true
name = "agent-runtime"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
agent.workspace = true
persistence.workspace = true
provider-core.workspace = true
provider-openai-chat-completions.workspace = true
tool-core.workspace = true
tool-edit-file.workspace = true
tool-list-files.workspace = true
tool-read-file.workspace = true
tool-search-files.workspace = true
types.workspace = true

color-eyre.workspace = true
directories.workspace = true
futures.workspace = true
notify.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
async-trait.workspace = true
serde.workspace = true
