[package]
edition.workspace = true
name = "agent"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
provider-core = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tool-core = { workspace = true }
types = { workspace = true }
