[package]
edition.workspace = true
name = "agent"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
persistence = { workspace = true }
provider-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tool-core = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
ulid = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
