[package]
description = "AI Agent application"
edition.workspace = true
name = "cli"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
color-eyre = { workspace = true }
provider-core = { workspace = true }
provider-google = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
