[package]
edition.workspace = true
name = "cli"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
color-eyre = { workspace = true }
futures = { workspace = true }
provider-core = { workspace = true }
provider-google = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
types = { workspace = true }
