[package]
edition.workspace = true
license.workspace = true
name = "kraai-agent"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
kraai-persistence = { workspace = true }
kraai-provider-core = { workspace = true }
kraai-tool-core = { workspace = true }
kraai-types = { workspace = true }
kraai-workspace-hack = { version = "0.1", path = "../kraai-workspace-hack" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
