[package]
edition.workspace = true
name = "kraai-tui"
publish = false
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "kraai"
path = "src/main.rs"

[dependencies]
arboard = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
crossbeam-channel = { workspace = true }
kraai-runtime = { workspace = true }
kraai-types = { workspace = true }
kraai-workspace-hack = { version = "0.1", path = "../kraai-workspace-hack" }
ratatui = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toon-format = { workspace = true }
tracing.workspace = true
