[package]
edition.workspace = true
name = "persistence"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
async-trait.workspace = true
color-eyre.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
types = { workspace = true }
ulid.workspace = true
