[package]
edition.workspace = true
name = "toon-schema"
rust-version.workspace = true
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
trybuild = { workspace = true }
