[package]
edition.workspace = true
name = "toon-schema"
publish = false
rust-version.workspace = true
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toon-format = { workspace = true }
trybuild = { workspace = true }
