[package]
edition.workspace = true
name = "agent_ts_bindings"
rust-version.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
agent = { workspace = true }
color-eyre = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
napi = { version = "3.8.2", features = ["async", "tokio_rt"] }
napi-derive = "3.5.1"
provider-core = { workspace = true }
provider-google = { workspace = true }
provider-openai = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tool-core = { workspace = true }
types = { workspace = true }

[build-dependencies]
napi-build = "2"
