[package]
edition.workspace = true
name = "agent_ts_bindings"
rust-version.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
agent-runtime = { workspace = true }
color-eyre = { workspace = true }
napi = { version = "3.8.2", features = ["async", "tokio_rt"] }
napi-derive = "3.5.1"
persistence = { workspace = true }
types = { workspace = true }

[build-dependencies]
napi-build = "2"
