[package]
edition.workspace = true
name = "tui"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
agent-runtime = { workspace = true }
color-eyre = { workspace = true }
crossbeam-channel = "0.5"
ratatui = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true
types = { workspace = true }
