[package]
edition.workspace = true
name = "tui"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
agent-runtime = { workspace = true }
arboard = "3.6.1"
base64 = "0.22.1"
color-eyre = { workspace = true }
crossbeam-channel = "0.5"
ratatui = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toon-format = { workspace = true }
tracing.workspace = true
types = { workspace = true }
