[package]
edition.workspace = true
name = "tui"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
agent-runtime = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
crossbeam-channel = { workspace = true }
ratatui = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toon-format = { workspace = true }
tracing.workspace = true
types = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
