[package]
edition.workspace = true
name = "kraai-provider-core"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
httpdate = "1.0.3"
kraai-types = { workspace = true }
kraai-workspace-hack = { version = "0.1", path = "../../kraai-workspace-hack" }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tracing = { workspace = true }
