[package]
edition.workspace = true
name = "kraai-provider-openai-chat-completions"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
kraai-provider-core = { workspace = true }
kraai-types = { workspace = true }
kraai-workspace-hack = { version = "0.1", path = "../../kraai-workspace-hack" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
