[package]
edition.workspace = true
name = "provider-core"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing.workspace = true
types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
