[package]
name = "provider-mistralrs"
publish = false
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
provider-core = { path = "../provider-core" }

toon-format = { workspace = true }
async-trait = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
mistralrs = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
