[package]
edition.workspace = true
name = "provider-mistralrs"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
provider-core = { path = "../provider-core" }

async-trait = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
mistralrs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toon-format = { workspace = true }
url = { workspace = true }
