[package]
edition.workspace = true
name = "provider-openai-codex"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
color-eyre = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
provider-core = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
url = { workspace = true }
urlencoding = "2.1.3"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
ulid = { workspace = true }
