[package]
edition.workspace = true
name = "provider-openai"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
async-openai = { workspace = true }
async-trait = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
provider-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
